src/test/deca/syntax/invalid/created/syntax/no_rightoperand.deca
// Description:
//    test de programme avec opérande droite manquante
//
// Resultats:
//    13:25: mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, INT, '-', '!', '(', FLOAT, STRING}
//
// Historique:
//    cree le 08/01/2022

{   
    
    
    boolean c = true &&  ;
}